//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Test App" {
  database_type: 'MySql'
  Note: 'Test'
}

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  username String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  messages Message [not null]
  rooms Room [not null]
  profile UserProfile
  Message Message [not null]
  Room Room [not null]
  RoomMember RoomMember [not null]
}

Table Message {
  id Int [pk, increment, note: 'Primary key']
  content String [not null, note: 'Content of the message (for text messages)']
  type MessageType [not null, note: 'Message type (text, image, etc.)']
  mediaUrl String [note: 'URL for media (image/video)']
  createdAt DateTime [default: `now()`, not null, note: 'Timestamp of message creation']
  updatedAt DateTime [not null, note: 'Timestamp for when the message is updated']
  senderId Int [not null, note: 'User who sent the message']
  sender User [not null, note: 'Sender relation to User']
  roomId Int [not null, note: 'Chat room where the message was sent']
  room Room [not null, note: 'Room relation to Room']
  User User [not null]
}

Table Room {
  id Int [pk, increment]
  name String [not null]
  description String
  type RoomType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  messages Message [not null]
  members User [not null]
  ownerId Int [not null]
  owner User [not null]
  RoomMember RoomMember [not null]
}

Table RoomMember {
  userId Int [not null]
  roomId Int [not null]
  user User [not null]
  room Room [not null]

  indexes {
    (userId, roomId) [pk]
  }
}

Table UserProfile {
  id Int [pk, increment]
  userId Int [unique, not null]
  firstName String
  lastName String
  avatarUrl String
  bio String
  user User [not null]
}

Enum MessageType {
  TEXT
  IMAGE
  VIDEO
  FILE
}

Enum RoomType {
  PUBLIC
  PRIVATE
  DM
}

Ref: Message.senderId > User.id

Ref: Message.roomId > Room.id

Ref: Room.ownerId > User.id

Ref: RoomMember.userId > User.id

Ref: RoomMember.roomId > Room.id

Ref: UserProfile.userId - User.id